--- a/html/2.html
+++ b/html/2.html
@@ -1,1 +1,63 @@
 <!-- Topic: HTML -->
+<!-- commenting line using ctrl + / -->
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
+    <!-- <h1>Html page 2</h1> -->
+
+    <!-- -: html is all about tag -->
+    hello <br />
+    <!--  br self close tag -->
+
+    <!-- some html tag examples -->
+    <b>bold</b> <br />
+    <i>italic</i><br />
+    <u>underline</u>
+    <hr />
+
+    <!-- html tag can be customized by using attributes or properties -->
+    <!-- type=disc,circle,square -->
+    <ul type="circle">
+      <li>lisging</li>
+      <li>lisging</li>
+      <li>lisging</li>
+      <li>lisging</li>
+    </ul>
+    <hr />
+    <!-- type = 1,a,A,I,i -->
+    <!-- type is optional property -->
+    <ol type="I">
+      <li>lisging</li>
+      <li>lisging</li>
+      <li>lisging</li>
+      <li>lisging</li>
+    </ol>
+    <hr />
+
+    <!-- src is mandatory property -->
+    <!-- relative path system -->
+    <!-- ../ = one step back -->
+    <!-- ../../ = two step back -->
+
+    <!-- absolute path system (avoid)-->
+    <!-- c:/desktop/......... -->
+
+    <img
+      src="../images/1.jp"
+      border="2"
+      width="200"
+      title="my image"
+      alt="logo"
+    />
+
+    <hr />
+
+    <a href="3.html" target="_blank">click here to go 3rd page</a>
+  </body>
+</html>
