--- a/html/3.html
+++ b/html/3.html
@@ -8,5 +8,13 @@
   </head>
   <body>
     <h1>page 3</h1>
+    <h2>page 3</h1>
+    <h3>page 3</h3>
+    <h4>page 3</h4>
+    <h5>page 3</h5>
+    <h6>page 3</h6>
+
+    <!-- design work by html only -->
+    hello this is normal text for my <font color="red" size="19">body</font> content
   </body>
 </html>
